--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	
+
 	<header>
 		<h1>Ultimate Frisbee</h1>
 		<nav>
@@ -18,9 +18,10 @@
 			<a href="http://www.usaultimate.org/index.html" target="_blank">USA Ultimate</a>
 		</nav>
 	</header>
-	
+
 	<main>
-		<aside class="left">
+		
+			<aside class="left">
 			<a href="https://commons.wikimedia.org/wiki/File%3AUltimate_Frisbee%2C_Jul_2009_-_17.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Ultimate_Frisbee%2C_Jul_2009_-_19.jpg" alt="Creative Common Ultimate Photo"
 					title="By Ed Yourdon [CC BY-SA 2.0 (http://creativecommons.org/licenses/by-sa/2.0)], via Wikimedia Commons" /> </a>
 
@@ -30,6 +31,7 @@
 
 			<a href="https://www.flickr.com/photos/paradisecoastie/15409853738/" title="Ultimate Frisbee"><img src="https://farm4.staticflickr.com/3948/15409853738_7dbfbfbac7_k.jpg" alt="Ultimate Frisbee"></a>
 		</aside>
+
 		<section class="right">
 			<h2>Watch your Head </h2>
 			<p>Ultimate Frisbee is a sport that I never played myself, but its popularity is something hard to ignore in many Midwestern college towns. Students (and people who wish they were still students) spend the few briefs months of good weather,
@@ -40,8 +42,10 @@
 			<p>Ultimate Frisbee requires a great deal of stamina and dexterity. Not surprisingly, the <abbr title="International Olympic Committee">IOC</abbr> officially recognized Ultimate as a sport in 2015. It can go up against other sports for
 				inclusion in Olympic games.</p>
 		</section>
-	</main>
+<section>
 	
+	</main>
+
 </body>
 
 </html>
